flex wrap issue resolved

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -66,9 +66,11 @@
 /*This where we work on the next section*/
 #headshot{
     max-width: 450px;
+    flex: 1 1 450px; /* Ensures they don't get smaller than 450px */
 }
 #side{
     max-width: 450px;
+    flex: 1 1 450px; /* Ensures they don't get smaller than 450px */
 }
 .light-section{
     background-color: whitesmoke;
@@ -79,6 +81,7 @@
 .dark-section{
     background-color: gray;
     display: flex;
+
     padding-top: 20px;
     padding-bottom: 20px;
 }
@@ -86,11 +89,14 @@
     max-width: 85%;
     margin: auto;
     display: flex;
+    flex-wrap: wrap-reverse;
     padding: 50px;
     align-items: center;
     border: #0c8ec2 solid 10px;
 }
 .content{
+    flex: 1 1 450px;
     margin: 20px;
-
 }
+
+
